# OpenWilds

./: .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  marketplace.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/skills/studio-mcp/: SKILL.md
app/: index.html  tsconfig.json
app/src/: main.ts  polyfills.ts  styles.css
app/src/assets/: ui-assets.ts  visual-assets.ts
app/src/auth/: convex-auth.tsx
app/src/client/: agent-session.ts  config.ts  format.ts  gold.ts  hud.ts  localnet-client.ts  player-nft.ts  player-storage.ts  sdk.ts  types.ts  wallet.ts  world-provisioning.ts
app/src/client/convex/: backend.ts  read-adapter.test.ts  read-adapter.ts  session-adapter.test.ts  session-adapter.ts  write-adapter.test.ts  write-adapter.ts
app/src/client/magicblock/: README.md  account-reader.ts  action-writer.ts  agent-session-service.ts  backend.ts  client-core.ts  control-binder.ts  decoders.ts  legacy-client-core.ts  native-client-core.ts  program-registry.ts  provisioning-service.ts  read-adapter.ts  read-service.ts  runtime-context.ts  session-adapter.ts  session-service.ts  state-reader.test.ts  state-reader.ts  trade-writer.ts  write-adapter.ts  write-service.ts
app/src/game/: autotile.ts  board.ts  ecs.ts  farm-catalog.ts  farm-growth.ts  farm.ts  game-time.ts  grid-constants.ts  grid-math.ts  grid-scene.ts  object-sprite-frames.ts  pantheon-hud.ts  ports.ts  resources.ts  state-store.ts  terrain.ts  trade-overlay.ts  types.ts  world-items.ts
app/src/game/components/: index.ts
app/src/game/entities/: hover.ts  index.ts  player.ts
app/src/game/hud/: action-progress.ts  agent-mode-button.ts  energy-panel.ts  minimap.ts  status-panel.ts  text.ts  tool-inventory.ts  top-right-status.ts  trade-panel.ts  types.ts
app/src/game/systems/: action-progress.ts  action-transition.ts  hide-hover.ts  hover.ts  index.ts  movement.ts  position-label.ts  render-position.ts
app/src/game/testing/: adapter-contract.test.ts  in-memory-adapter.ts
app/src/studio/: convex-studio.ts  studio-scene.ts  studio.ts  terrain-generator.ts
app/src/studio/app/: StudioShell.tsx  studio-react.tsx
app/src/studio/components/: SegmentedControl.tsx
app/src/studio/convex/: convex-studio.ts
app/src/studio/legacy/: studio.ts
convex/: README.md  auth.ts  authz.ts  gameState.test.ts  gameState.ts  gameSystems.test.ts  schema.ts  studio.ts  studioTerrainAutotileMasks.ts  studioTerrainBuild.ts  studioTerrainBuildData.ts  tsconfig.json  workspaceAuth.ts  workspaceBootstrap.ts  workspaces.test.ts  workspaces.ts
convex/_generated/: api.d.ts
convex/game/: ECS.md  constants.ts  defaults.ts  dev.ts  ecs.ts  freshness.test.ts  freshness.ts  ingest.ts  queries.ts  readModel.ts  validators.ts  worlds.ts
convex/game/systems/: movement.ts  rest.ts  tileActions.ts  trades.ts
convex/indexers/magicblock/: checkpoints.ts  types.ts
convex/indexers/mud/: README.md
convex/schema/: game.ts  indexers.ts  shared.ts  studio.ts  workspaces.ts
convex/shared/: ids.ts
convex/studio/: README.md
openclaw-plugin/: README.md  open-wilds.config.example.json  openclaw.plugin.json  package-lock.json  package.json
openclaw-plugin/src/: index.ts
programs-ecs/components/active_action/: Cargo.toml
programs-ecs/components/energy/: Cargo.toml
programs-ecs/components/farm_type/: Cargo.toml
programs-ecs/components/inventory/: Cargo.toml
programs-ecs/components/player_owner/: Cargo.toml
programs-ecs/components/terrain_type/: Cargo.toml
programs-ecs/components/tile_farm/: Cargo.toml
programs-ecs/components/tile_farm/src/: lib.rs
programs-ecs/components/tile_item/: Cargo.toml
programs-ecs/components/tile_terrain/: Cargo.toml
programs-ecs/components/tile_terrain/src/: lib.rs
programs-ecs/components/world_authority/: Cargo.toml
programs-ecs/components/world_terrain_registry/: Cargo.toml
programs-ecs/components/world_terrain_registry/src/: lib.rs
programs-ecs/systems/accept_trade/: Cargo.toml
programs-ecs/systems/accept_trade/src/: lib.rs
programs-ecs/systems/chop_tile/: Cargo.toml
programs-ecs/systems/chop_tile/src/: lib.rs
programs-ecs/systems/define_farm_type/: Cargo.toml
programs-ecs/systems/define_farm_type/src/: lib.rs
programs-ecs/systems/define_terrain_type/: Cargo.toml
programs-ecs/systems/define_terrain_type/src/: lib.rs
programs-ecs/systems/define_tile_item/: Cargo.toml
programs-ecs/systems/define_tile_item/src/: lib.rs
programs-ecs/systems/define_tile_terrain/: Cargo.toml
programs-ecs/systems/define_tile_terrain/src/: lib.rs
programs-ecs/systems/define_tile_terrain_batch/: Cargo.toml
programs-ecs/systems/define_tile_terrain_batch/src/: lib.rs
programs-ecs/systems/drop_tile/: Cargo.toml
programs-ecs/systems/grab_tile/: Cargo.toml
programs-ecs/systems/grab_tile/src/: lib.rs
programs-ecs/systems/grant_starter_inventory/: Cargo.toml
programs-ecs/systems/grant_starter_inventory/src/: lib.rs
programs-ecs/systems/harvest_tile/: Cargo.toml
programs-ecs/systems/harvest_tile/src/: lib.rs
programs-ecs/systems/initialize_player_owner/: Cargo.toml
programs-ecs/systems/initialize_player_owner/src/: lib.rs
programs-ecs/systems/initialize_world_authority/: Cargo.toml
programs-ecs/systems/initialize_world_authority/src/: lib.rs
programs-ecs/systems/movement/: Cargo.toml
programs-ecs/systems/plant_tile/: Cargo.toml
programs-ecs/systems/plant_tile/src/: lib.rs
programs-ecs/systems/register_terrain_type/: Cargo.toml
programs-ecs/systems/register_terrain_type/src/: lib.rs
programs-ecs/systems/sleep/: Cargo.toml
programs-ecs/systems/sleep/src/: lib.rs
programs-ecs/systems/sync_player_owner/: Cargo.toml
programs-ecs/systems/till_tile/: Cargo.toml
programs-ecs/systems/water_tile/: Cargo.toml
programs/open-wilds/: Cargo.toml
programs/open-wilds/src/: lib.rs
scripts/: localnet-deploy.sh  provision-game-world.ts  studio-mcp-server.mjs
scripts/studio-mcp/: README.md
scripts/terrain-generator/: README.md
tests/: open-wilds.ts
tmp/imagegen/: chroma-key-to-alpha.mjs
(+27 files in other folders)
