[package]
name = "open-wilds"
version = "0.2.4"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "open_wilds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["anchor-spl/idl-build", "no-entrypoint"]
default = []
idl-build = ["anchor-spl/idl-build", "bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
anchor-spl = "0.32.1"
bolt-lang.workspace = true
player_owner = { path = "../../programs-ecs/components/player_owner", features = ["cpi"] }
