[package]
name = "tile_farm"
version = "0.2.4"
description = "Open Wilds tile farming component"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tile_farm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
