[package]
name = "tile_terrain"
version = "0.2.4"
description = "Open Wilds tile terrain component"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tile_terrain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
