[package]
name = "chop_tile"
version = "0.2.4"
description = "Open Wilds tree chopping system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chop_tile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
active_action = { version = "0.2.4", path = "../../components/active_action", features = ["cpi"] }
bolt-lang.workspace = true
player_owner = { path = "../../components/player_owner", features = ["cpi"] }
open-wilds = { path = "../../../programs/open-wilds", features = ["cpi"] }
energy = { version = "0.2.4", path = "../../components/energy", features = ["cpi"] }
farm_type = { version = "0.2.4", path = "../../components/farm_type", features = ["cpi"] }
inventory = { version = "0.2.4", path = "../../components/inventory", features = ["cpi"] }
position = { version = "0.2.4", path = "../../components/position", features = ["cpi"] }
tile_farm = { version = "0.2.4", path = "../../components/tile_farm", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
