[package]
name = "define_tile_terrain"
version = "0.2.4"
description = "Open Wilds tile terrain definition system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "define_tile_terrain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
tile_terrain = { version = "0.2.4", path = "../../components/tile_terrain", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
