[package]
name = "initialize_player_owner"
version = "0.2.4"
description = "Open Wilds player owner initialization system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "initialize_player_owner"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
player_owner = { path = "../../components/player_owner", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
