[package]
name = "register_terrain_type"
version = "0.2.4"
description = "Open Wilds world terrain type registration system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "register_terrain_type"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
terrain_type = { version = "0.2.4", path = "../../components/terrain_type", features = ["cpi"] }
world_terrain_registry = { version = "0.2.4", path = "../../components/world_terrain_registry", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
