[package]
name = "sleep"
version = "0.2.4"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sleep"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
open-wilds = { version = "0.2.4", path = "../../../programs/open-wilds", features = ["cpi"] }
player_owner = { path = "../../components/player_owner", features = ["cpi"] }
active_action = { version = "0.2.4", path = "../../components/active_action", features = ["cpi"] }
energy = { version = "0.2.4", path = "../../components/energy", features = ["cpi"] }
